--- a/assets/scss/mixins/_font_mix.scss
+++ b/assets/scss/mixins/_font_mix.scss
@@ -2,11 +2,13 @@
 @import '../mixins/common_mix';
 @import '../mixins/responsive';
 
-@mixin font($cl,$fm,$sz,$stl,$wt){
+@mixin font($cl,$fm,$sz,$stl,$wt,$lh: 30px,$ls: 0.5px){
 
     color: $cl;
     font-family: $fm;
     font-size: $sz;
     font-style: $stl;
     font-weight: $wt;
+    line-height: $lh;
+    letter-spacing: $ls;
 }
